refactor: apply DIP to Account and Category services via persistence ports
- Create AccountPersistenceAdapter implementing AccountPersistencePort
- Create AccountUseCase interface with account operations
- Refactor AccountService to depend on ports instead of repositories
- Create UserContextPort to abstract SecurityContextHolder dependency
- Create UserContextAdapter implementing UserContextPort
- Create CategoryPersistencePort and CategoryPersistenceAdapter
- Create CategoryUseCase interface with category operations
- Refactor CategoryService to depend on ports instead of repositories
- All services now follow dependency inversion principle
- Compile verified: BUILD SUCCESSFUL

Co-Authored-By: Claude Haiku 4.5 <noreply@anthropic.com>